package refactorizado;

public interface DescuentoStrategy {
    double aplicarDescuento(double totalCompra);
}
